<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2020-2022. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/send_loc"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/hwsearchview_ic_public_input_search"
            android:visibility="gone" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.huawei.hms.maps.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:cameraTargetLat="51"
                map:cameraTargetLng="10"
                map:cameraZoom="8.5"
                map:mapType="normal"
                map:uiCompass="true"
                map:uiZoomControls="true" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/btnHospital" />

                <Button
                    android:id="@+id/btnAtm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btnHospital"
                    android:layout_weight="1"
                    android:text="@string/btnAtm" />

                <Button
                    android:id="@+id/btnPetrolBunk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btnAtm"
                    android:layout_weight="1"
                    android:text="@string/btnPetrol" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.05"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:background="#D3D3D3"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:text="@string/nearby_places"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <RelativeLayout
            android:id="@+id/rlSendCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:paddingStart="5dp">

            <ImageView
                android:id="@+id/currentlocation_icon_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_location"
                android:tint="@color/colorPrimary"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/currnet_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/currentlocation_icon_iv"
                android:text="@string/send_location"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/currnet_location_accurecy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/currnet_location_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="1dp"
                android:layout_toEndOf="@id/currentlocation_icon_iv"
                android:text="@string/accuracy"
                android:textColor="@color/grey"
                android:textSize="14sp" />


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNearByLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/response_text_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" />
    </LinearLayout>
</LinearLayout>