<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2020-2022. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/profile_page_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="34sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/act_userprofile_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/avatar" />

            <ImageView
                android:id="@+id/img_update_user_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_photo_camera" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/act_userprofile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_person"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/act_userprofile_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/act_userprofile_icon"
                android:text="@string/name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/act_userprofile_name_rt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_userprofile_title_tv"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/act_userprofile_icon"
                android:hint="@string/enter_name"
                android:lines="1"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/act_userprofile_about_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_status"
                app:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/act_userprofile_aboutTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/act_userprofile_about_iv"
                android:text="@string/status"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/act_userprofile_aboutDetailsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_userprofile_aboutTv"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/act_userprofile_about_iv"
                android:hint="@string/enter_status"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/act_userprofile_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/act_userprofile_phone_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_phone"
                app:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/act_userprofile_phoneTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/act_userprofile_phone_iv"
                android:text="@string/phone"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/act_userprofile_phoneNumberTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/act_userprofile_phoneTitleTv"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/act_userprofile_phone_iv"
                android:text="7007286202"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/act_userprofile_phoneNumberTv"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/grey" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Media, location"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/act_userprofile_document_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"/>

        <Button
            android:id="@+id/act_userprofile_submit_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_background"
            android:text="Submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>