<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Huawei Technologies Co., Ltd. 2020-2022. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp">

            <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_photo_camera"
                app:tint="@color/colorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/person_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_person"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/nameTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/person_iv"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTitleTv"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/person_iv"
                android:text=" "
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/nameTv"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/ivNameEdit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_edit"
                app:tint="@color/colorPrimary" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/about_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_status"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/aboutTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/about_iv"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/aboutDetailsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutTv"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/about_iv"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/aboutDetailsTv"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/phone_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_phone"
                app:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/phoneTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/phone_iv"
                android:text="@string/phone"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/phoneNumberTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneTitleTv"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/phone_iv"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/phoneNumberTv"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>